Fixed alignment of sidebar

--- a/views/pets/style.scss
+++ b/views/pets/style.scss
@@ -174,7 +174,6 @@ ul {
   }
   .show {
     padding-bottom: 20px;
-    text-align: left;
   }
 }
 .main {
